Change InMemoryHistoryManager internal storage to linked list