@@ -1,10 +1,13 @@
 package manager.historymanager;
 
+import manager.tasks.Epic;
 import manager.tasks.Status;
 import manager.tasks.Task;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+import java.util.List;
 
 class InMemoryHistoryManagerTest {
     private static InMemoryHistoryManager historyManager;
@@ -15,42 +18,98 @@ class InMemoryHistoryManagerTest {
     }
 
     @Test
-    void shouldAddNewTaskWhenNotFull() {
+    void shouldAddNewTasks() {
         var task1 = new Task(null, "Сделать что-то одно", "А потом починить", Status.NEW);
+        var epic1 = new Epic(2, "Большой эпик 1", "Из двух подзадач");
 
         historyManager.add(task1);
+        historyManager.add(epic1);
 
-        Assertions.assertEquals(task1, historyManager.getHistory().getFirst());
+        Assertions.assertEquals(task1, historyManager.getHistory().get(0));
+        Assertions.assertEquals(epic1, historyManager.getHistory().get(1));
     }
 
     @Test
-    public void shouldDeleteFirstElementIfFull() {
-        var task1 = new Task(1, "1", "А потом починить", Status.NEW);
-        var task2 = new Task(2, "2", "А потом починить", Status.NEW);
-        var task3 = new Task(3, "3", "А потом починить", Status.NEW);
-        var task4 = new Task(4, "4", "А потом починить", Status.NEW);
-        var task5 = new Task(5, "5", "А потом починить", Status.NEW);
-        var task6 = new Task(6, "6", "А потом починить", Status.NEW);
-        var task7 = new Task(7, "7", "А потом починить", Status.NEW);
-        var task8 = new Task(8, "8", "А потом починить", Status.NEW);
-        var task9 = new Task(9, "9", "А потом починить", Status.NEW);
-        var task10 = new Task(10, "10", "А потом починить", Status.NEW);
-        var newTask = new Task(11, "new", "А потом починить", Status.NEW);
+    void shouldUpdateLinksCorrectlyWhenDeletingFromMiddle() {
+        var task1 = new Task(1, "Сделать что-то одно", "А потом починить", Status.NEW);
+        var epic1 = new Epic(2, "Большой эпик 1", "Из двух подзадач");
+        var epic2 = new Epic(4, "Большой эпик 2", "Из двух подзадач");
+        var epic3 = new Epic(3, "Большой эпик 3", "Из двух подзадач");
 
         historyManager.add(task1);
-        historyManager.add(task2);
-        historyManager.add(task3);
-        historyManager.add(task4);
-        historyManager.add(task5);
-        historyManager.add(task6);
-        historyManager.add(task7);
-        historyManager.add(task8);
-        historyManager.add(task9);
-        historyManager.add(task10);
-        historyManager.add(newTask);
+        historyManager.add(epic1);
+        historyManager.add(epic2);
+        historyManager.add(epic3);
+        historyManager.remove(4);
 
-        Assertions.assertEquals(task2, historyManager.getHistory().getFirst());
-        Assertions.assertEquals(newTask, historyManager.getHistory().getLast());
+        Assertions.assertEquals(task1, historyManager.getHistory().get(0));
+        Assertions.assertEquals(epic1, historyManager.getHistory().get(1));
+        Assertions.assertEquals(epic3, historyManager.getHistory().get(2));
     }
 
+    @Test
+    void shouldUpdateLinksCorrectlyWhenDeletingFromHeadAndTail() {
+        var task1 = new Task(1, "Сделать что-то одно", "А потом починить", Status.NEW);
+        var epic1 = new Epic(2, "Большой эпик 1", "Из двух подзадач");
+        var epic2 = new Epic(4, "Большой эпик 2", "Из двух подзадач");
+        var epic3 = new Epic(3, "Большой эпик 3", "Из двух подзадач");
+
+        historyManager.add(task1);
+        historyManager.add(epic1);
+        historyManager.add(epic2);
+        historyManager.add(epic3);
+        historyManager.remove(1);
+        historyManager.remove(3);
+
+        Assertions.assertEquals(epic1, historyManager.getHistory().get(0));
+        Assertions.assertEquals(epic2, historyManager.getHistory().get(1));
+    }
+
+    @Test
+    void shouldUpdateLinksCorrectlyAfterClearingTheList() {
+        var task1 = new Task(1, "Сделать что-то одно", "А потом починить", Status.NEW);
+        var epic1 = new Epic(2, "Большой эпик 1", "Из двух подзадач");
+        var epic2 = new Epic(4, "Большой эпик 2", "Из двух подзадач");
+        var epic3 = new Epic(3, "Большой эпик 3", "Из двух подзадач");
+
+        historyManager.add(task1);
+        historyManager.add(epic1);
+        historyManager.remove(1);
+        historyManager.remove(2);
+        historyManager.add(epic2);
+        historyManager.add(epic3);
+
+        Assertions.assertEquals(epic2, historyManager.getHistory().get(0));
+        Assertions.assertEquals(epic3, historyManager.getHistory().get(1));
+    }
+
+    @Test
+    void shouldHandleDuplicatesCorrectly() {
+        var task1 = new Task(1, "Сделать что-то одно", "А потом починить", Status.NEW);
+        var epic1 = new Epic(2, "Большой эпик 1", "Из двух подзадач");
+        var epic2 = new Epic(4, "Большой эпик 2", "Из двух подзадач");
+
+        historyManager.add(task1);
+        historyManager.add(epic1);
+        historyManager.add(epic2);
+        historyManager.add(task1);
+        historyManager.add(task1);
+
+        Assertions.assertEquals(epic1, historyManager.getHistory().get(0));
+        Assertions.assertEquals(epic2, historyManager.getHistory().get(1));
+        Assertions.assertEquals(task1, historyManager.getHistory().get(2));
+    }
+
+    @Test
+    void shouldCacheHistory() {
+        var task1 = new Task(1, "Сделать что-то одно", "А потом починить", Status.NEW);
+        var epic1 = new Epic(2, "Большой эпик 1", "Из двух подзадач");
+
+        historyManager.add(task1);
+        historyManager.add(epic1);
+        List<Task> history1 = historyManager.getHistory();
+        List<Task> history2 = historyManager.getHistory();
+
+        Assertions.assertSame(history1, history2);
+    }
 }
